name:          unison-shared
category:      Compiler
version:       0.1
license:       MIT
cabal-version: >= 1.8
license-file:  LICENSE
author:        Paul Chiusano 
maintainer:    Paul Chiusano <paul.chiusano@gmail.com>
stability:     provisional
homepage:      http://unisonweb.org
bug-reports:   https://github.com/unisonweb/platform/issues
copyright:     Copyright (C) 2013 Paul Chiusano and contributors 
synopsis:      The Unison programming language and platform
description:   Shared code between node and editor

build-type:    Simple
extra-source-files:
data-files:

source-repository head
  type: git
  location: git://github.com/unisonweb/platform.git

-- `cabal install -foptimized` enables optimizations
flag optimized
  manual: True
  default: False

flag quiet
  manual: True
  default: False

library
  hs-source-dirs: src

  exposed-modules:
    Unison.ABT
    Unison.Dimensions
    Unison.Distance
    Unison.Doc
    Unison.Eval
    Unison.Eval.Interpreter
    Unison.Hash
    Unison.Hashable
    Unison.JSON
    Unison.Kind
    Unison.Metadata
    Unison.Node
    Unison.Node.BasicNode
    Unison.Node.Builtin
    Unison.Node.MemStore
    Unison.Node.MemNode
    Unison.Node.Store
    Unison.Note
    Unison.Path
    Unison.Paths
    Unison.Reference
    Unison.Remote
    Unison.Symbol
    Unison.Term
    Unison.TermEdit
    Unison.Type
    Unison.Typechecker
    Unison.Typechecker.Context
    Unison.TypeVar
    Unison.Var
    Unison.View
    Unison.Views

  build-depends:
    aeson,
    base,
    base64-bytestring,
    bifunctors,
    bytestring,
    containers,
    comonad,
    free,
    mtl,
    murmur-hash,
    prelude-extras,
    text,
    transformers,
    vector

  ghc-options: -Wall -fno-warn-name-shadowing -threaded -rtsopts -with-rtsopts=-N

  if flag(optimized)
    ghc-options: -funbox-strict-fields -O2

  if flag(quiet)
    ghc-options: -v0

test-suite tests
  type:           exitcode-stdio-1.0
  main-is:        Suite.hs
  ghc-options:    -w -threaded -rtsopts -with-rtsopts=-N -v0
  hs-source-dirs: tests
  other-modules:
  build-depends:
    base,
    containers,
    tasty,
    tasty-hunit,
    tasty-smallcheck,
    tasty-quickcheck,
    transformers,
    unison-shared
