name:          unison-core-test
category:      Compiler
version:       0.1
license:       MIT
cabal-version: >= 1.8
license-file:  LICENSE
author:        Unison Computing, public benefit corp
maintainer:    Paul Chiusano <paul.chiusano@gmail.com>, Runar Bjarnason <runarorama@gmail.com>, Arya Irani <arya.irani@gmail.com>
stability:     provisional
homepage:      http://unisonweb.org
bug-reports:   https://github.com/unisonweb/unison/issues
copyright:     Copyright (C) 2013-2018 Unison Computing, PBC and contributors
synopsis:      Parser and typechecker for the Unison language
description:

build-type:    Simple
extra-source-files:
data-files:

source-repository head
  type: git
  location: git://github.com/unisonweb/unison.git


library
  hs-source-dirs: src

  exposed-modules:
    Unison.Test.ABT
    Unison.Test.Common
    Unison.Test.DataDeclaration
    Unison.Test.Referent
    Unison.Test.Term
    Unison.Test.Type
    Unison.Test.Var

  build-depends:
    base,
    containers,
    easytest,
    megaparsec,
    raw-strings-qq,
    text,
    unison-core,
    unison-parser-typechecker

  ghc-options: -Wall -O0 -fno-warn-name-shadowing -fno-warn-missing-pattern-synonym-signatures
