cabal-version: 2.2
name:          easytest
category:      Compiler
version:       0.1
license:       MIT
license-file:  LICENSE
author:        Paul Chiusano
maintainer:    Paul Chiusano <paul.chiusano@gmail.com>
stability:     provisional
homepage:      http://unison-lang.org
bug-reports:   https://github.com/unisonweb/unison/issues
copyright:     Copyright (C) 2016 Paul Chiusano and contributors
synopsis:      Simple, expressive testing library

build-type:    Simple
extra-source-files:
data-files:

source-repository head
  type: git
  location: git://github.com/unisonweb/unison.git

-- `cabal install -foptimized` enables optimizations
flag optimized
  manual: True
  default: False

flag quiet
  manual: True
  default: False

-- NOTE: Keep in sync throughout repo.
common unison-common
  default-language: Haskell2010
  default-extensions:
    ApplicativeDo,
    BlockArguments,
    DeriveFunctor,
    DerivingStrategies,
    DoAndIfThenElse,
    FlexibleContexts,
    FlexibleInstances,
    LambdaCase,
    MultiParamTypeClasses,
    ScopedTypeVariables,
    TupleSections,
    TypeApplications

library
  import: unison-common

  hs-source-dirs: src

  exposed-modules:
    EasyTest

  -- these bounds could probably be made looser
  build-depends:
    async                     >= 2.1.1,
    base                      >= 4.3,
    exceptions,
    mtl                       >= 2.0.1,
    containers                >= 0.4.0,
    stm                       >= 2.4,
    random                    >= 1.1

  ghc-options: -Wall -fno-warn-name-shadowing

  if flag(optimized)
    ghc-options: -funbox-strict-fields -O2

  if flag(quiet)
    ghc-options: -v0

-- Preferred way to run EasyTest-based test suite
executable runtests
  import:         unison-common
  main-is:        Suite.hs
  ghc-options:    -w -threaded -rtsopts -with-rtsopts=-N -v0
  hs-source-dirs: tests
  other-modules:
  build-depends:
    base,
    easytest

-- I really have no idea why you'd ever use this, just use an executable as above
test-suite tests
  import:         unison-common
  type:           exitcode-stdio-1.0
  main-is:        Suite.hs
  ghc-options:    -w -threaded -rtsopts -with-rtsopts=-N -v0
  hs-source-dirs: tests
  other-modules:
  build-depends:
    base,
    easytest
