name:          parsec-layout
category:      Compiler
version:       0.1
license:       MIT
cabal-version: >= 1.8
license-file:  LICENSE
author:        Paul Chiusano
maintainer:    Paul Chiusano <paul.chiusano@gmail.com>
stability:     provisional
homepage:      http://unisonweb.org
bug-reports:   https://github.com/unisonweb/platform/issues
copyright:     Copyright (C) 2013 Ed Kmett, Luke Palmer, and Paul Chiusano
synopsis:      Layout parsing functions for parsec
description:   Layout parsing functions for parsec

build-type:    Simple
extra-source-files:
data-files:

source-repository head
  type: git
  location: git://github.com/unisonweb/unison.git

-- `cabal install -foptimized` enables optimizations
flag optimized
  manual: True
  default: False

flag quiet
  manual: True
  default: False

library
  hs-source-dirs: src

  exposed-modules:
    Text.Parsec.Layout

  build-depends:
    base,
    parsec

  ghc-options: -Wall -O0 -fno-warn-name-shadowing -fno-warn-missing-pattern-synonym-signatures

  if flag(optimized)
    ghc-options: -funbox-strict-fields -O2

  if flag(quiet)
    ghc-options: -v0
